[package]
name = "rust-proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
futures-util = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3.5"
futures-core = "0.3.30"
tower-http = { version = "0.5.2", features = ["fs"] }
serialport = "4.3.0"
tokio-serial = "5.4.4"
